092_polynomial_1/grade.txt
Grading at 11/14/2024:18:18:54.332446
For commit ID 91a04977dd0dee5dfc85ffdb38866d6f1967dab9
Grading at Thu Nov 14 01:18:54 PM EST 2024
Compiling your code with our test main
In file included from testmain.cpp:4:
poly.hpp: In instantiation of ‘void Polynomial<NumT>::cleanUp() [with NumT = int]’:
poly.hpp:109:37:   required from ‘bool Polynomial<NumT>::operator==(const Polynomial<NumT>&) const [with NumT = int]’
testmain.cpp:64:89:   required from here
poly.hpp:127:12: error: no match for ‘operator=’ (operand types are ‘std::map<unsigned int, int, std::less<unsigned int>, std::allocator<std::pair<const unsigned int, int> > >::iterator’ {aka ‘std::_Rb_tree<unsigned int, std::pair<const unsigned int, int>, std::_Select1st<std::pair<const unsigned int, int> >, std::less<unsigned int>, std::allocator<std::pair<const unsigned int, int> > >::iterator’} and ‘void’)
  127 |         it = terms.erase(it);
      |         ~~~^~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/map:60,
                 from poly.hpp:7,
                 from testmain.cpp:4:
/usr/include/c++/11/bits/stl_tree.h:256:12: note: candidate: ‘std::_Rb_tree_iterator<std::pair<const unsigned int, int> >& std::_Rb_tree_iterator<std::pair<const unsigned int, int> >::operator=(const std::_Rb_tree_iterator<std::pair<const unsigned int, int> >&)’
  256 |     struct _Rb_tree_iterator
      |            ^~~~~~~~~~~~~~~~~
/usr/include/c++/11/bits/stl_tree.h:256:12: note:   no known conversion for argument 1 from ‘void’ to ‘const std::_Rb_tree_iterator<std::pair<const unsigned int, int> >&’
g++ failed

Overall Grade: FAILED
